--- a/package.json
+++ b/package.json
@@ -29,5 +29,8 @@
     "webpack": "^5.102.0",
     "webpack-cli": "^6.0.1",
     "webpack-dev-server": "^5.2.2"
+  },
+  "dependencies": {
+    "husky": "^9.1.7"
   }
 }
